# AlphaZeroLite

./: .gitpod.yml  README.md  pyproject.toml  requirements.txt  setup.py
src/zerolite/: __init__.py  __main__.py  arguments.py  globalval.py  interface.py  model.py  simulation.py  uci.py
zerolite/: __main__.py  arguments.py  globalval.py  interface.py  model.py
