[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zerolite"
version = "0.0.1"
description = "Alpha Zero-like self-train chess engine"
readme = "README.md"
authors = [{ name = "Aki Hakune", email = "akihakune@protonmail.ch" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["chess", "PyTorch", "neural network", "deep learning"]
dependencies = [
    "torch >= 1.13.1",
    "python-chess"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/git-akihakune/AlphaZeroLite"

[project.scripts]
zerolite = "zerolite.__main__:main"